Wed Mar 26 15:04:00 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* manual/format.me: Correct location of example external formatter
	  script.

Tue Mar 25 04:15:41 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* configure.in: Use AC_MSG_NOTICE throughout rather than MAN_ECHO.
	  Move the definition of MAN_ECHO_VAR to just above its only uses.

Tue Mar 25 03:44:06 GMT 2003  Giuseppe Sacco  <eppesuig@debian.org>

	* po/it.po: Update.

Tue Mar 25 03:41:13 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* src/whatis.c (parse_name): Free lowdbname before returning.

Tue Mar 25 03:38:39 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* lib/strappend.c, lib/xstrdup.c, lib/xstrndup.c: Remove unused
	  definitions of VOID.

Sun Mar 16 00:51:12 GMT 2003  Jeremy C. Reed  <reed@reedmedia.net>

	* configure.in (--enable-mandirs): Use 'mandirs' rather than
	  'mandir', as the latter clashes with an autoconf variable.

Wed Mar 12 13:17:45 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* libdb/db_lookup.c (gripe_bad_multi_key): This function has been
	  unused since 24 June 2002 (noticed by Giuseppe Sacco). Remove.
	* libdb/db_storage.h (gripe_bad_multi_key): Remove prototype.

Tue Mar 11 21:17:56 GMT 2003  Giuseppe Sacco  <eppesuig@debian.org>

	* po/it.po: Update.

Mon Mar 10 17:20:46 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* libdb/db_btree.c, libdb/db_delete.c, libdb/db_gdbm.c,
	  libdb/db_lookup.c, libdb/db_ndbm.c, libdb/db_storage.h,
	  libdb/db_store.c, libdb/db_ver.c: Style cleanup (as with src/* on
	  28 May 2001). No functional changes.

Mon Mar 10 15:55:34 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* GNUmakefile.in (EVERYTHING, ALL): Move intl ahead of libdb. (Not
	  'make -j'-clean, though ...)
	* libdb/Makefile.in: Use '$(top_srcdir)' rather than '..'
	  throughout. Add $(top_srcdir)/intl to the include path if USE_NLS
	  is set.

Mon Mar 10 15:24:04 GMT 2003  Colin Watson  <cjwatson@debian.org>
