@@ -13,6 +13,8 @@ Major changes since man-db 2.4.1:
 	o Drop privileges in order to be able to read pages in
 	  non-world-readable user manpaths while setuid.
 
+	o man can be built with --disable-setuid again.
+
 	Improvements:
 	-------------
 
